recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:3: error: type mismatch;
 found   : Unit
 required: List[Int]
    return
    ^butLast:6: error: type mismatch;
 found   : List[Int]
 required: Int
    return l::butLast(l.tail)
            ^